Fixing bug 116598. Making document.lastModified = now() if the server doesn't send a last-modified header. This makes us compatible with IE. r=caillon@returnzero.com, sr=bzbarsky@mit.edu, a=asa@mozilla.org